//protoc -I ./  pb/srvcomic.proto --go_out=plugins=grpc:./

syntax = "proto3";
package pb;

service ComicService {
  rpc GetComicRowById (ComicFilterRequest) returns (ComicRowResponse) {};
  rpc AddComic(ComicRowResponse) returns (AddComicResponse) {};
  rpc GetComicListByPage (ComicFilterRequest) returns (ComicListResponse) {};
}

message ComicFilterRequest {
    int64    comic_id = 1;
    int64    status   = 2;
    int64    row_num  = 3;
    int64    page_num  = 4;
}

message ComicRowResponse{
    int64    comic_id = 1;
    string   comic_name = 2;
    int64    create_time = 3;
    int32    status = 4;
}

message ComicListResponse{
    int64     rows_total = 1;
    int64     page_num   = 2;
    int64     row_num    = 3;
    int64     page_total = 4;
    repeated  ComicRowResponse data = 5;
}

message AddComicResponse{
    int64  comic_id = 1;
    bool   success = 2;
}